Make font shorthand initial/inherit parsing less strict

Make font shorthand initial/inherit parsing less strict, the
current solution means the special logic in ConsumeFontFamily
is not taken into account. Since all font longhands will reject
css wide keywords and ConsumeFontFamily has special rules for them,
we can just remove the while loop.

Bug: 824611

Change-Id: I9bae2c1497e61bb0d93973bb1bfaac386d0c6d0b
Reviewed-on: https://chromium-review.googlesource.com/982557
Reviewed-by: Timothy Loh <timloh@chromium.org>
Commit-Queue: Rob Buis <rob.buis@samsung.com>
Cr-Commit-Position: refs/heads/master@{#547677}
Former-commit-id: 2d5bb27c5c0d59fbb8f7a961b5d6861480f154f1